--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,17 @@ version = "0.1.0"
 authors = ["Oguz Bilgener <oguz@bilgener.me>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+tokio = { version = "1", features = ["macros", "sync", "net", "rt-multi-thread", "signal"] }
+noxious = { path = "../core" }
+warp = "0.3.0"
+chrono = "0.4.19"
+
+
+# Since this is a testing tool, we can safely abort when a thread panics
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
