--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,3 +11,7 @@ serde = "^1.0.123"
 serde_derive = "^1.0.123"
 rand = "0.8.3"
 bytes = "1.0.1"
+tokio-stream = "0.1.3"
+async-stream = "0.3.0"
+stream-cancel = "0.8.0"
+thiserror = "1.0.23"
