--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,13 +5,15 @@ authors = ["Oguz Bilgener <oguz@bilgener.me>"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "1", features = ["net", "sync", "signal", "io-util"] }
+tokio = { version = "1", features = ["net", "sync", "signal", "io-util", "rt", "macros"] }
 serde_json = "^1.0.62"
 serde = "^1.0.123"
 serde_derive = "^1.0.123"
 rand = "0.8.3"
 bytes = "1.0.1"
-tokio-stream = "0.1.3"
+# TODO: remove unused dependencies
+tokio-util = { version = "0.6.3", features = ["codec"]}
+tokio-stream = { version = "0.1.3", features = ["io-util"] }
 async-stream = "0.3.0"
 stream-cancel = "0.8.0"
 thiserror = "1.0.23"
