--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,18 +9,12 @@ tokio = { version = "1", features = ["net", "sync", "signal", "io-util", "rt", "
 serde_json = "^1.0.62"
 serde = "^1.0.123"
 serde_derive = "^1.0.123"
-rand = "0.8.3"
+rand = { version = "0.8.3", features = ["std_rng"] }
 bytes = "1.0.1"
 # TODO: remove unused dependencies
-tokio-util = { version = "0.6.3", features = ["codec"]}
+tokio-util = { version = "0.6.3", features = ["codec"] }
 tokio-stream = { version = "0.1.3", features = ["io-util"] }
 async-stream = "0.3.0"
 stream-cancel = "0.8.0"
 thiserror = "1.0.23"
 futures = { version = "0.3.12" }
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
