--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 tokio = { version = "1", features = ["macros", "sync", "net", "rt-multi-thread", "signal"] }
 noxious = { path = "../core" }
 warp = "0.3.0"
+tracing = { version = "0.1.25", features = ["log", "log-always"] }
+tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
+tracing-opentelemetry = "0.11.0"
+log = "0.4.14"
+pretty_env_logger = "0.4.0"
