--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,3 +15,4 @@ bytes = "1.0.1"
 tokio-util = { version = "0.6.3", features = ["codec"] }
 thiserror = "1.0.23"
 futures = { version = "0.3.12" }
+bmrng = "0.4.0"
