--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies]
 tokio = { version = "1", features = ["macros", "sync", "net", "rt-multi-thread", "signal"] }
 noxious = { path = "../core" }
+serde_json = "^1.0.62"
+serde = "^1.0.123"
+serde_derive = "^1.0.123"
 warp = "0.3.0"
 tracing = { version = "0.1.25", features = ["log", "log-always"] }
 tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
