--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2018"
 tokio = { version = "1", features = ["macros", "sync", "net", "rt-multi-thread", "signal"] }
 noxious = { path = "../core" }
 serde_json = "^1.0.62"
-serde = "^1.0.123"
-serde_derive = "^1.0.123"
+serde = { version = "^1.0.123", features = ["derive"] }
 warp = "0.3.0"
 tracing = { version = "0.1.25", features = ["log", "log-always"] }
 tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
