--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,3 +14,4 @@ tokio-util = { version = "0.6.3", features = ["codec"] }
 thiserror = "1.0.23"
 futures = { version = "0.3.12" }
 bmrng = "0.4.0"
+tracing = { version = "0.1.25", features = ["log"] }
