--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,3 +15,6 @@ thiserror = "1.0.23"
 futures = { version = "0.3.12" }
 bmrng = "0.4.0"
 tracing = { version = "0.1.25", features = ["log"] }
+
+[dev-dependencies]
+serde_json = "^1.0.62"
