--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,7 +12,7 @@ bytes = "1.0.1"
 serde_json = "^1.0.62"
 serde = { version = "^1.0.123", features = ["derive"] }
 warp = "0.3.0"
-tracing = { version = "0.1.25", features = ["log", "log-always"] }
+tracing = { version = "0.1.25", features = ["attributes", "log", "log-always"] }
 tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
 tracing-opentelemetry = "0.11.0"
 log = "0.4.14"
