--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "noxious"
 description = "The core library for noxious, a Rust port of Toxiproxy"
-version = "0.1.0"
+version = "0.1.1-alpha.0"
 authors = ["Oguz Bilgener <oguz@bilgener.me>"]
 repository = "https://github.com/oguzbilgener/noxious"
 edition = "2018"
