--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["proxy", "toxiproxy", "chaos", "tcp"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-tokio = { version = "1", features = ["net", "sync", "signal", "io-util", "rt", "macros", "time"] }
+tokio = { version = "1", features = ["net", "sync", "signal", "io-util", "rt", "macros", "time", "test-util"] }
 rand = { version = "0.8.3", features = ["std_rng"] }
 bytes = "1.0.1"
 serde = { version = "^1.0.123", features = ["derive"] }
@@ -25,3 +25,4 @@ tracing = { version = "0.1.25", features = ["log"] }
 
 [dev-dependencies]
 serde_json = "^1.0.62"
+tokio-test = "0.4.0"
