--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,3 +20,7 @@ pretty_env_logger = "0.4.0"
 bmrng = "0.4.0"
 thiserror = "1.0.24"
 clap = "3.0.0-beta.2"
+opentelemetry = "0.12.0"
+
+[dev-dependencies]
+tokio-test = "0.4.0"
