--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,11 +9,24 @@ license = "MIT OR Apache-2.0"
 categories = ["network-programming", "development-tools"]
 keywords = ["proxy", "toxiproxy", "chaos", "tcp"]
 
+include = [
+    "CHANGELOG.md",
+    "LICENSE",
+    "README.md",
+    ".gitignore",
+    "Cargo.toml",
+    "src/*.rs",
+    "src/*/*.rs",
+    "tests/*.rs",
+    "benches/**/*.rs",
+]
+
+
 [badges]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-tokio = { version = "1", features = ["net", "sync", "signal", "io-util", "rt", "macros", "time", "test-util"] }
+tokio = { version = "1", features = ["net", "sync", "signal", "io-util", "rt", "macros", "time"] }
 rand = { version = "0.8.3", features = ["std_rng"] }
 bytes = "1.0.1"
 serde = { version = "^1.0.123", features = ["derive"] }
@@ -22,7 +35,21 @@ thiserror = "1.0.23"
 futures = { version = "0.3.12" }
 bmrng = "0.4.0"
 tracing = { version = "0.1.25", features = ["log"] }
+async-trait = "0.1.47"
 
 [dev-dependencies]
+tokio = { version = "1", features = [
+    "net",
+    "sync",
+    "signal",
+    "io-util",
+    "rt",
+    "macros",
+    "time",
+    "test-util",
+] }
+mockall = "0.9.1"
+mock-io = { version = "0.3", features = ["async-tokio"] }
+lazy_static = "1.4.0"
 serde_json = "^1.0.62"
 tokio-test = "0.4.0"
