Add missing line

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -30,3 +30,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: code-coverage-report
+          path: cobertura.xml
