--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,7 @@ bytes = "1.0.1"
 serde_json = "^1.0.62"
 serde = { version = "^1.0.123", features = ["derive"] }
 warp = "0.3.0"
+async-trait = "0.1.47"
 tracing = { version = "0.1.25", features = ["attributes", "log", "log-always"] }
 tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
 tracing-opentelemetry = "0.11.0"
@@ -24,3 +25,5 @@ opentelemetry = "0.12.0"
 
 [dev-dependencies]
 tokio-test = "0.4.0"
+lazy_static = "1.4.0"
+mockall = "0.9.1"
