Add noxious/toxiproxy client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
-members = ["core", "server", "client", "cli"]
+members = ["core", "server", "client"]
 
 [profile.dev]
 panic = "abort"
