--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,7 +11,7 @@ futures = { version = "0.3.12" }
 bytes = "1.0.1"
 serde_json = "^1.0.62"
 serde = { version = "^1.0.123", features = ["derive"] }
-warp = { version = "0.3.0", features = [] }
+warp = { version = "0.3.0", features = [], default-features = false }
 async-trait = "0.1.47"
 tracing = { version = "0.1.25", features = ["attributes", "log", "log-always"] }
 tracing-log = { version = "0.1.2", features = ["env_logger", "log-tracer"] }
