--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -93,12 +93,13 @@ jobs:
           tagRegexGroup: 1
 
       - name: Build and push
+        if: success()
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           # Only push if this is a tagged build
-          push: ${{ success() && startsWith(github.ref, 'refs/tags/noxious') }}
+          push: ${{ startsWith(github.ref, 'refs/tags/noxious') }}
           tags: |
             oguzbilgener/noxius:latest
           # TODO: parse the version number from the tag?
