--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,6 +8,7 @@ documentation = "https://docs.rs/noxious-client"
 license = "MIT OR Apache-2.0"
 categories = ["network-programming", "development-tools"]
 keywords = ["proxy", "toxiproxy", "chaos", "tcp"]
+publish = false
 
 include = [
     "CHANGELOG.md",
