--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "noxious-server"
-version = "0.1.0"
+version = "1.0.0-rc.15"
 authors = ["Oguz Bilgener <oguz@bilgener.me>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 noxious = { path = "../core" }
