--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -27,16 +27,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - uses: olegtarasov/get-tag@v2.1
-        name: Get Tag Name
-        id: tagName
-        # with:
-        #   tagRegex: "noxious-(.*)"
-        #   tagRegexGroup: 1
-
-      - name: Print Tag
-        run: echo "${{ steps.tagName.outputs.tag }}"
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -51,10 +41,10 @@ jobs:
           platforms: linux/amd64
             #,linux/arm64
           # tag_with_ref: true
-          push: ${{ startsWith(github.ref, 'refs/tags') }}
+          push: true
           tags: |
             oguzbilgener/noxious:latest
-            oguzbilgener/noxious:${{ steps.tagName.outputs.tag }}
+            oguzbilgener/noxious:${{ github.event.client_payload.tag }}
             ghcr.io/oguzbilgener/noxious:latest
-            ghcr.io/oguzbilgener/noxious:${{ steps.tagName.outputs.tag }}
+            ghcr.io/oguzbilgener/noxious:${{ github.event.client_payload.tag }}
           # TODO: support tags for sub projects
