fix(build): Strip the v prefix from Docker image tags

--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -44,7 +44,7 @@ jobs:
           push: true
           tags: |
             oguzbilgener/noxious:latest
-            oguzbilgener/noxious:${{ github.event.client_payload.tag }}
+            oguzbilgener/noxious:${{ github.event.client_payload.version }}
             ghcr.io/oguzbilgener/noxious:latest
-            ghcr.io/oguzbilgener/noxious:${{ github.event.client_payload.tag }}
+            ghcr.io/oguzbilgener/noxious:${{ github.event.client_payload.version }}
           # TODO: support tags for sub projects
