--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -54,7 +54,7 @@ jobs:
 
   semantic_release:
     name: Semantic Release
-    needs: build_and_test
+    needs: [build_and_test, clippy_check]
     if: github.ref == 'refs/heads/rc' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
