--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -5,18 +5,30 @@ on:
 name: Build Artifacts
 
 jobs:
-
   build_image_and_publish:
-    name: Build and Publish Docker Image
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - label: x86_64
+            suffix: amd64
+            platform: linux/amd64
+            dockerfile: Dockerfile
+          - label: ARM64
+            suffix: arm64
+            platform: linux/arm64
+            dockerfile: Dockerfile.arm64
+          - label: ARMv7
+            suffix: armv7
+            platform: linux/arm/v7
+            dockerfile: Dockerfile.armv7
+    name: "${{ matrix.label }}: Build and Publish Docker Images"
     if: github.event.client_payload.tag != ''
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
           ref: 'refs/tags/${{ github.event.client_payload.tag }}'
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -38,13 +50,49 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64
-            #,linux/arm64
-          # tag_with_ref: true
+          platforms: ${{ matrix.platform }}
           push: true
+          file: ${{ matrix.dockerfile }}
           tags: |
-            oguzbilgener/noxious:latest
-            oguzbilgener/noxious:${{ github.event.client_payload.version }}
-            ghcr.io/oguzbilgener/noxious:latest
-            ghcr.io/oguzbilgener/noxious:${{ github.event.client_payload.version }}
-          # TODO: support tags for sub projects
+            oguzbilgener/noxious:latest-${{ matrix.suffix }}
+            oguzbilgener/noxious:${{ github.event.client_payload.version }}-${{ matrix.suffix }}
+            ghcr.io/oguzbilgener/noxious:latest-${{ matrix.suffix }}
+            ghcr.io/oguzbilgener/noxious:${{ github.event.client_payload.version }}-${{ matrix.suffix }}
+
+  publish_multi_arch_image:
+    name: Publish Multi-Arch Image
+    if: github.event.client_payload.tag != ''
+    runs-on: ubuntu-latest
+    needs:
+      - build_image_and_publish
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install manifest-tool
+        run: |
+          curl -fSL -o ./manifest-tool https://github.com/estesp/manifest-tool/releases/download/v1.0.2/manifest-tool-linux-amd64
+          curl -fSL -o ./manifest-tool.asc https://github.com/estesp/manifest-tool/releases/download/v1.0.2/manifest-tool-linux-amd64.asc
+          export GNUPGHOME="$(mktemp -d)"
+          gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys 27F3EA268A97867EAF0BD05C0F386284C03A1162
+          gpg --batch --verify manifest-tool.asc manifest-tool
+          chmod +x ./manifest-tool
+          rm manifest-tool.asc
+
+      - name: Push Multi-Arch Manifest
+        run: |
+          ./manifest-tool push \
+            --platforms linux/amd64,linux/arm64,linux/arm/v7 \
+            --template oguzbilgener/noxious:latest-ARCHVARIANT \
+            --target oguzbilgener/noxious:latest
+
+          ./manifest-tool push \
+            --platforms linux/amd64,linux/arm64,linux/arm/v7 \
+            --template oguzbilgener/noxious:${{ github.event.client_payload.version }}-ARCHVARIANT \
+            --target oguzbilgener/noxious:${{ github.event.client_payload.version }}
